--- a/LulzBot Mini/Print-Profiles/Cura/ABS-IC3D-Standard.ini
+++ b/LulzBot Mini/Print-Profiles/Cura/ABS-IC3D-Standard.ini
@@ -13,8 +13,8 @@ print_temperature3 = 0
 print_temperature4 = 0
 print_temperature5 = 0
 print_bed_temperature = 95
-support = None
-platform_adhesion = None
+support = Touching buildplate
+platform_adhesion = Raft
 support_dual_extrusion = Both
 wipe_tower = False
 wipe_tower_volume = 15
